--- a/index.css
+++ b/index.css
@@ -1,7 +1,15 @@
 h1{ 
-    color:black;
+    color:#2DE0CA;
 	font-family:Blackoak Std;
 	font-size:25px;
 	font-style:italic;
 	margin-top: 15px;
 	margin-left: 160px
+}
+
+h3{
+	margin-top: 15px;
+	margin-left: 160px
+}
+
+ 
