--- a/index.css
+++ b/index.css
@@ -15,4 +15,14 @@ h3{
 
 }
 
+p{
+	margin-left: 970px;
+	margin-top: -45px;
+	font-family: Luminari;
+	font-family:Blackoak Std;
+	font-size:25px;
+	font-style:italic;
+	color:yellow;
+}
+
  
