--- a/SessionKStudio/week02/week02-class02/week01class01hw.css
+++ b/SessionKStudio/week02/week02-class02/week01class01hw.css
@@ -1,43 +1,67 @@
 #title {
   color: black;
-  background-color:#C63044;
+  background-color: #ff00bd;
   width: 300px;
   padding: 40px;
   margin: 60px;
 }
 
+#line {
+  color: yellow;
+  margin-left: 60px;
+}
+
 #trans {
-  background-color: #336dff;
+  background-color: #00edff;
   width: 460px;
   padding: 40px;
-  margin: 60px;
-  margin-left: 300px;
+  margin: 0px;
+  margin-left: 400px;
 }
 
 #letter {
-  background-color: green;
-  color: white;
+  background-color: #00ffce;
+  color: black;
   width: 460px;
   padding: 40px;
-  margin: 20px;
-  margin-left: 150px;
+  margin: 0px;
+  margin-left: 400px;
+  margin-top: -10px;
 }
 
-#i{
-    color:black;
-    margin-left:1000px;
-    background-color: #E5622E;
-    width: 50px;
-    padding: 40px;
-    margin: 20px;
-
+#i {
+  color: black;
+  background-color: #ff4e00;
+  width: 50px;
+  margin-left: 1000px;
+  padding: 20px;
+  margin-top: -130px;
 }
+
+#text00 {
+  background-color: yellow;
+  color: black;
+  width: 460px;
+  padding: 40px;
+  margin: 10px;
+  margin-left: 400px;
+}
+
+#text01 {
+  color: white;
+  background-color: black;
+  width: 460px;
+  padding: 40px;
+  margin: 10px;
+  margin-left: 400px;
+}
+
 .circle {
   height: 250px;
   width: 250px;
   background-color: red;
   border-radius: 50%;
-  margin-left：800px;
+  margin-left: 550px;
 }
 body {
   background-color: black;
