--- a/SessionKStudio/week03/week03-class02/week03class02hw01.css
+++ b/SessionKStudio/week03/week03-class02/week03class02hw01.css
@@ -1,3 +1,16 @@
+a {
+  font-family: Luminari;
+  font-size: 20px;
+  margin-left: 300px;
+}
+a:visited {
+  color: pink;
+}
+
+a:hover {
+  color: #15edc9;
+}
+
 body {
   background-color: black;
 }
