--- a/SessionKStudio/week03/week03-class02/week03class02hw01.css
+++ b/SessionKStudio/week03/week03-class02/week03class02hw01.css
@@ -2,6 +2,8 @@ a {
   font-family: Luminari;
   font-size: 20px;
   margin-left: 300px;
+  position: relative;
+  z-index: 4;
 }
 a:visited {
   color: pink;
@@ -82,4 +84,9 @@ body {
   font-size: 21px;
   position: relative;
   z-index: 2;
+}
+
+#more {
+  margin-top: 30px;
+  margin-left: 850px;
 }
