--- a/SessionKStudio/week03/week03-class02/week03class02hw02.css
+++ b/SessionKStudio/week03/week03-class02/week03class02hw02.css
@@ -3,7 +3,7 @@ a {
   margin-top: 50px;
   font-family: Letter Gothic Std;
   font-size: larger;
-  position: fixed;
+  position: relative;
 }
 
 a:visited {
@@ -12,6 +12,14 @@ a:visited {
 
 a:hover {
   color: #15ed71;
+}
+
+#home {
+  margin-left: 100px;
+}
+
+#main {
+  margin-left: 400px;
 }
 
 #things {
