--- a/SessionKStudio/week03/week03-class02/obscure01.css
+++ b/SessionKStudio/week03/week03-class02/obscure01.css
@@ -51,6 +51,12 @@ p {
   position: relative;
 }
 
+#window {
+  width: 200px;
+  margin-top: -550px;
+  margin-left: -950px;
+  position: absolute;
+}
 #more {
   margin-top: 30px;
   margin-left: 850px;
@@ -63,7 +69,7 @@ a {
 }
 
 a:visited {
-  color: white;
+  color: #f9f4bd;
 }
 
 a:hover {
