--- a/SessionKStudio/week03/week03-class02/homepage.css
+++ b/SessionKStudio/week03/week03-class02/homepage.css
@@ -7,8 +7,73 @@ body {
   margin-left: 260px;
 }
 
-p {
-  font-size: 100px;
-  margin-left: 300px;
-  margin-top: -500px;
+.circle {
+  position: absolute;
+  z-index: 1;
+  height: 300px;
+  width: 300px;
+  background-color: yellow;
+  border-radius: 50%;
+  margin-left: 285px;
+  margin-top: 180px;
+}
+
+.circle1 {
+  position: absolute;
+  z-index: 1;
+  height: 300px;
+  width: 300px;
+  background-color: #ffc5c5;
+  border-radius: 50%;
+  margin-left: 685px;
+  margin-top: 180px;
+}
+
+.circle2 {
+  position: absolute;
+  z-index: 1;
+  height: 300px;
+  width: 300px;
+  background-color: WHITE;
+  border-radius: 50%;
+  margin-left: 1085px;
+  margin-top: 180px;
+}
+
+a:visited {
+  color: #e82e21;
+}
+
+a:hover {
+  color: rgb(2, 253, 211);
+}
+
+#main {
+  z-index: 2;
+  position: absolute;
+  font-size: 70px;
+  color: #e82e21;
+  font-family: "Kanit", sans-serif;
+  margin-left: 340px;
+  margin-top: 270px;
+}
+
+#obscure {
+  z-index: 2;
+  position: absolute;
+  font-size: 50px;
+  color: #e82e21;
+  font-family: Luminari;
+  margin-left: 710px;
+  margin-top: 295px;
+}
+
+#light {
+  z-index: 2;
+  position: absolute;
+  font-size: 50px;
+  color: #e82e21;
+  font-family: Letter Gothic Std;
+  margin-left: 1150px;
+  margin-top: 295px;
 }
