--- a/SessionKStudio/week06/week06class01/ARCHIVE/html/aron.css
+++ b/SessionKStudio/week06/week06class01/ARCHIVE/html/aron.css
@@ -118,7 +118,7 @@ a:hover {
 
   font-family: Nueva Std;
   font-size: 28pt;
-  color: white;
+  color: WHITE;
   font-style: italic;
   -webkit-text-stroke-width: 1px;
   -webkit-text-stroke-color: black;
@@ -133,17 +133,30 @@ a:hover {
 
   font-family: Nueva Std;
   font-size: 28pt;
-  color: white;
+  color: #e63e9a;
   font-style: italic;
   -webkit-text-stroke-width: 1px;
   -webkit-text-stroke-color: black;
 }
-
 .div7 {
   grid-area: 7 / 1 / 8 / 2;
   width: 190px;
   height: 40px;
   background-color: #2b864c;
+  margin-left: 20px;
+
+  font-family: Nueva Std;
+  font-size: 28pt;
+  color: #e63e9a;
+  font-style: italic;
+  -webkit-text-stroke-width: 1px;
+  -webkit-text-stroke-color: black;
+}
+.div8 {
+  grid-area: 8 / 1 / 9 / 2;
+  width: 190px;
+  height: 40px;
+  background-color: #e63e9a;
   margin-left: 20px;
 
   font-family: Nueva Std;
@@ -154,35 +167,69 @@ a:hover {
   -webkit-text-stroke-color: black;
 }
 
+.div9 {
+  grid-area: 9 / 1 / 10 / 2;
+  width: 190px;
+  height: 40px;
+  background-color: #e63e9a;
+  margin-left: 20px;
+
+  font-family: Nueva Std;
+  font-size: 28pt;
+  color: #e63e9a;
+  font-style: italic;
+  -webkit-text-stroke-width: 1px;
+  -webkit-text-stroke-color: black;
+}
+.div10 {
+  grid-area: 10 / 1 / 11 / 2;
+  width: 190px;
+  height: 40px;
+  background-color: #e63e9a;
+  margin-left: 20px;
+
+  font-family: Nueva Std;
+  font-size: 28pt;
+  color: #e63e9a;
+  font-style: italic;
+  -webkit-text-stroke-width: 1px;
+  -webkit-text-stroke-color: black;
+}
+.div11 {
+  grid-area: 11 / 1 / 12 / 2;
+  width: 190px;
+  height: 40px;
+  background-color: #2b864c;
+  margin-left: 20px;
+
+  font-family: Nueva Std;
+  font-size: 28pt;
+  color: #e63e9a;
+  font-style: italic;
+  -webkit-text-stroke-width: 1px;
+  -webkit-text-stroke-color: black;
+}
 .white {
   width: 800px;
   height: 500px;
   background-color: white;
-  margin-top: -360px;
+  margin-top: -270px;
   margin-left: 400px;
   position: ;
 }
+
 .images {
-  margin-left: 450px;
+  margin-left: 950px;
   margin-top: -450px;
 }
-
+#boy1 {
+  margin-left: 470px;
+  margin-top: -400px;
+}
 #boy2 {
-  margin-left: 20px;
+  margin-left: 50px;
 }
 
 #boy3 {
-  margin-left: 20px;
-}
-
-#boy4 {
-  margin-left: 20px;
-}
-
-#boy5 {
-  margin-top: 20px;
-}
-
-#boy6 {
-  margin-left: 20px;
+  margin-left: 50px;
 }
