--- a/SessionKStudio/week06/week06class01/ARCHIVE/html/mainpage.css
+++ b/SessionKStudio/week06/week06class01/ARCHIVE/html/mainpage.css
@@ -8,19 +8,10 @@ body {
   color: #2b864c;
   font-style: italic;
   -webkit-text-stroke-width: 0.8px;
-  margin-left: 400px;
+  margin-left: 1000px;
   width: 80px;
   border-radius: 25px;
-  background-color: #e63e9a;
-}
-
-.white {
-  width: 800px;
-  height: 500px;
   background-color: white;
-  margin-top: -395px;
-  margin-left: 400px;
-  position: ;
 }
 
 a:visited {
@@ -159,15 +150,23 @@ a:hover {
   -webkit-text-stroke-color: black;
 }
 
-#rere {
-  margin-top: -1700px;
+.div7 {
+  grid-area: 7 / 1 / 8 / 2;
+  width: 190px;
+  height: 40px;
+  background-color: #2b864c;
+  margin-left: 20px;
+
+  font-family: Nueva Std;
+  font-size: 28pt;
+  color: white;
+  font-style: italic;
+  -webkit-text-stroke-width: 1px;
+  -webkit-text-stroke-color: black;
 }
 
-.images {
-  margin-left: 400px;
-  margin-top: 100px;
-}
-
-#boy7 {
-  margin-top: -300px;
+#photos {
+  width: 400px;
+  margin-left: 500px;
+  margin-top: -400px;
 }
