--- a/SessionKStudio/week06/week06class01/ARCHIVE/html/killon.css
+++ b/SessionKStudio/week06/week06class01/ARCHIVE/html/killon.css
@@ -118,7 +118,7 @@ a:hover {
 
   font-family: Nueva Std;
   font-size: 28pt;
-  color: #e63e9a;
+  color: white;
   font-style: italic;
   -webkit-text-stroke-width: 1px;
   -webkit-text-stroke-color: black;
