--- a/SessionKStudio/week09/china.css
+++ b/SessionKStudio/week09/china.css
@@ -11,6 +11,10 @@ body {
     display: none;
   }
 
+  #tv {
+    display: none;
+  }
+
   body {
     background-color: black;
   }
@@ -109,6 +113,10 @@ body {
     display: block;
   }
   #iphone {
+    display: none;
+  }
+
+  #tv {
     display: none;
   }
 
@@ -227,21 +235,42 @@ body {
   #iphone {
     display: none;
   }
-  #tv{
-    display:block;
+  #tv {
+    display: block;
   }
 
-  body{
-    background-image: url(glitchgif.gif);
+  body {
+    background-color: black;
   }
-  .line {
+
+  .glow {
     font-family: Luminari;
-    font-size: 300px;
-    color:#06f3f9;
-    -webkit-text-stroke-width: 5px;
-    -webkit-text-stroke-color: black;
-    margin-left: 100px;
-    margin-top: 15px;
+    font-size: 100pt;
+    margin-top: -130px;
+    font-style: italic;
+    color: #fff;
+    text-align: center;
+    -webkit-animation: glow 1s ease-in-out infinite alternate;
+    -moz-animation: glow 1s ease-in-out infinite alternate;
+    animation: glow 1s ease-in-out infinite alternate;
     position: relative;
-    z-index: 5;
+    z-index: 1;
   }
+  @-webkit-keyframes glow {
+    from {
+      text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #e60073,
+        0 0 40px #e60073, 0 0 50px #e60073, 0 0 60px #e60073, 0 0 70px #e60073;
+    }
+
+    to {
+      text-shadow: 0 0 20px #fff, 0 0 30px #ff4da6, 0 0 40px #ff4da6,
+        0 0 50px #ff4da6, 0 0 60px #ff4da6, 0 0 70px #ff4da6, 0 0 80px #ff4da6;
+    }
+  }
+
+  .disco {
+    margin-left: 1400px;
+    position: relative;
+    z-index: 3;
+  }
+}
