--- a/SessionKStudio/week09/china.css
+++ b/SessionKStudio/week09/china.css
@@ -246,7 +246,7 @@ body {
   .glow {
     font-family: Luminari;
     font-size: 100pt;
-    margin-top: -130px;
+    margin-top: 500px;
     font-style: italic;
     color: #fff;
     text-align: center;
@@ -270,7 +270,99 @@ body {
 
   .disco {
     margin-left: 1400px;
+    margin-top: 100px;
     position: relative;
     z-index: 3;
+  }
+
+  select {
+    font-family: cochin;
+    font-style: italic;
+    font-size: 50px;
+    color: #ff4da6;
+    text-transform: uppercase;
+  }
+
+  select:hover {
+    cursor: pointer;
+    color: #fff;
+    background-color: #f4d219;
+    transition: 0.25s all ease-in-out;
+  }
+  @import url(https://fonts.googleapis.com/css?family=Exo + 2:200i);
+
+  :root {
+    /* Base font size */
+    font-size: 10px;
+
+    /* Set neon color */
+    --neon-text-color: #a0252b;
+    --neon-border-color: #f4d219;
+  }
+
+  body {
+    font-family: Fugaz One;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: #000;
+    min-height: 100vh;
+  }
+
+  h1 {
+    font-size: 13rem;
+    font-weight: 200;
+    font-style: italic;
+    color: #fff;
+    padding: 4rem 6rem 5.5rem;
+    border: 0.4rem solid #fff;
+    border-radius: 2rem;
+    text-transform: uppercase;
+    animation: flicker 1.5s infinite alternate;
+    margin-top: -1300px;
+  }
+
+  h1::-moz-selection {
+    background-color: var(--neon-border-color);
+    color: var(--neon-text-color);
+  }
+
+  h1::selection {
+    background-color: var(--neon-border-color);
+    color: var(--neon-text-color);
+  }
+
+  h1:focus {
+    outline: none;
+  }
+
+  /* Animate neon flicker */
+  @keyframes flicker {
+    0%,
+    19%,
+    21%,
+    23%,
+    25%,
+    54%,
+    56%,
+    100% {
+      text-shadow: -0.2rem -0.2rem 1rem #fff, 0.2rem 0.2rem 1rem #fff,
+        0 0 2rem var(--neon-text-color), 0 0 4rem var(--neon-text-color),
+        0 0 6rem var(--neon-text-color), 0 0 8rem var(--neon-text-color),
+        0 0 10rem var(--neon-text-color);
+
+      box-shadow: 0 0 0.5rem #fff, inset 0 0 0.5rem #fff,
+        0 0 2rem var(--neon-border-color),
+        inset 0 0 2rem var(--neon-border-color),
+        0 0 4rem var(--neon-border-color),
+        inset 0 0 4rem var(--neon-border-color);
+    }
+
+    20%,
+    24%,
+    55% {
+      text-shadow: none;
+      box-shadow: none;
+    }
   }
 }
