--- a/SessionKStudio/week09/china.css
+++ b/SessionKStudio/week09/china.css
@@ -16,7 +16,7 @@ body {
   }
 
   body {
-    background-color: black;
+    background-color: #f4d219;
   }
 
   [data-component="slideshow"] .slide {
@@ -68,11 +68,11 @@ body {
     }
   }
   .headline {
-    font-family: Luminari;
-    font-size: 48.1px;
-    color: #a0252b;
-    -webkit-text-stroke-width: 0.5px;
-    -webkit-text-stroke-color: #f4d219;
+    font-family: Fugaz One;
+    font-size: 100px;
+    color: #f4d219;
+    -webkit-text-stroke-width: 2px;
+    -webkit-text-stroke-color: #a0252b;
 
     position: relative;
     z-index: 5;
@@ -127,6 +127,34 @@ body {
     background: linear-gradient(to right, #f4d219 50%, black 50%);
   }
 
+  .headline {
+    width: 680px;
+    margin-top: 20px;
+    margin-left: 15px;
+    position: relative;
+    z-index: 5;
+  }
+
+  .dark {
+    width: 680px;
+    margin-left: 45px;
+    margin-top: 20px;
+    animation: fadein 0.2s infinite;
+    position: absolute;
+    z-index: 5;
+  }
+  @keyframes fadein {
+    from {
+      opacity: 0;
+    }
+    to {
+      opacity: 1;
+    }
+  }
+
+  #container {
+    margin-top: -30px;
+  }
   .dragon {
     position: relative;
     margin-left: 320px;
@@ -146,17 +174,6 @@ body {
     to {
       -webkit-transform: rotate(0deg);
     }
-  }
-  .headline {
-    font-family: Luminari;
-    font-size: 90px;
-    color: #f4d219;
-    -webkit-text-stroke-width: 1.5px;
-    -webkit-text-stroke-color: #a0252b;
-    margin-left: 15px;
-    margin-top: 15px;
-    position: relative;
-    z-index: 5;
   }
 
   .title {
@@ -243,31 +260,6 @@ body {
     background-color: black;
   }
 
-  .glow {
-    font-family: Luminari;
-    font-size: 100pt;
-    margin-top: 500px;
-    font-style: italic;
-    color: #fff;
-    text-align: center;
-    -webkit-animation: glow 1s ease-in-out infinite alternate;
-    -moz-animation: glow 1s ease-in-out infinite alternate;
-    animation: glow 1s ease-in-out infinite alternate;
-    position: relative;
-    z-index: 1;
-  }
-  @-webkit-keyframes glow {
-    from {
-      text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #e60073,
-        0 0 40px #e60073, 0 0 50px #e60073, 0 0 60px #e60073, 0 0 70px #e60073;
-    }
-
-    to {
-      text-shadow: 0 0 20px #fff, 0 0 30px #ff4da6, 0 0 40px #ff4da6,
-        0 0 50px #ff4da6, 0 0 60px #ff4da6, 0 0 70px #ff4da6, 0 0 80px #ff4da6;
-    }
-  }
-
   .disco {
     margin-left: 1400px;
     margin-top: 100px;
@@ -310,6 +302,7 @@ body {
   }
 
   h1 {
+    margin-top: -400px;
     font-size: 13rem;
     font-weight: 200;
     font-style: italic;
