--- a/SessionKStudio/week09/china.css
+++ b/SessionKStudio/week09/china.css
@@ -231,95 +231,70 @@ body {
 
   body {
     background-color: black;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background: #000;
-    min-height: 30vh;
+  }
+  .glow {
+    font-family: Fugaz One;
+    font-size: 300pt;
+    margin-top: 90px;
+    font-style: italic;
+    color: black;
+    text-align: center;
+    margin-top: 700px;
+    -webkit-animation: glow 1s ease-in-out infinite alternate;
+    -moz-animation: glow 1s ease-in-out infinite alternate;
+    animation: glow 1s ease-in-out infinite alternate;
+    position: relative;
+    z-index: 1;
   }
 
-  .disco {
-    margin-left: 1400px;
-    margin-top: 100px;
-    position: relative;
+  @-webkit-keyframes glow {
+    from {
+      text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #e60073,
+        0 0 40px #e60073, 0 0 50px #e60073, 0 0 60px #e60073, 0 0 70px #e60073;
+    }
+
+    to {
+      text-shadow: 0 0 20px #fff, 0 0 30px #ff4da6, 0 0 40px #ff4da6,
+        0 0 50px #ff4da6, 0 0 60px #ff4da6, 0 0 70px #ff4da6, 0 0 80px #ff4da6;
+    }
+  }
+
+  .plate {
+    margin-left: 300px;
+    margin-top: -1500px;
+    position: absolute;
+    z-index: 2;
+  }
+
+  .plate {
+    -webkit-animation: rotation 2s infinite linear;
+  }
+
+  @-webkit-keyframes rotation {
+    from {
+      -webkit-transform: rotate(360deg);
+    }
+    to {
+      -webkit-transform: rotate(0deg);
+    }
+  }
+  .techno {
+    margin-left: 1700px;
+    margin-top: -1400px;
+    position: absolute;
     z-index: 3;
   }
 
-  select {
-    font-family: cochin;
-    font-style: italic;
-    font-size: 50px;
-    color: #ff4da6;
-    text-transform: uppercase;
+  .techno {
+    -webkit-animation: rotation 2s infinite linear;
   }
 
-  select:hover {
-    cursor: pointer;
-    color: #fff;
-    background-color: #f4d219;
-    transition: 0.25s all ease-in-out;
-  }
-
-  :root {
-    font-size: 10px;
-    --neon-text-color: #a0252b;
-    --neon-border-color: #f4d219;
-  }
-
-  h1 {
-    font-family: Fugaz One;
-    font-size: 13rem;
-    font-weight: 200;
-    font-style: italic;
-    color: #fff;
-    padding: 4rem 6rem 5.5rem;
-    border: 0.4rem solid #fff;
-    border-radius: 2rem;
-    text-transform: uppercase;
-    animation: flicker 1.5s infinite alternate;
-    margin-top: 300px;
-  }
-
-  h1::-moz-selection {
-    background-color: var(--neon-border-color);
-    color: var(--neon-text-color);
-  }
-
-  h1::selection {
-    background-color: var(--neon-border-color);
-    color: var(--neon-text-color);
-  }
-
-  h1:focus {
-    outline: none;
-  }
-
-  /* Animate neon flicker */
-  @keyframes flicker {
-    0%,
-    19%,
-    21%,
-    23%,
-    25%,
-    54%,
-    56%,
-    100% {
-      text-shadow: -0.2rem -0.2rem 1rem #fff, 0.2rem 0.2rem 1rem #fff,
-        0 0 2rem var(--neon-text-color), 0 0 4rem var(--neon-text-color),
-        0 0 6rem var(--neon-text-color), 0 0 8rem var(--neon-text-color),
-        0 0 10rem var(--neon-text-color);
-
-      box-shadow: 0 0 0.5rem #fff, inset 0 0 0.5rem #fff,
-        0 0 2rem var(--neon-border-color),
-        inset 0 0 2rem var(--neon-border-color),
-        0 0 4rem var(--neon-border-color),
-        inset 0 0 4rem var(--neon-border-color);
+  @-webkit-keyframes rotation {
+    from {
+      -webkit-transform: rotate(360deg);
     }
-    20%,
-    24%,
-    55% {
-      text-shadow: none;
-      box-shadow: none;
+    to {
+      -webkit-transform: rotate(0deg);
     }
   }
 }
