--- a/SessionKStudio/week09/china.css
+++ b/SessionKStudio/week09/china.css
@@ -40,8 +40,7 @@ body {
     margin-left: 8px;
     margin-top: 10px;
   }
-
- 
+}
 
 @media screen and (min-device-width: 1200px) and (max-device-width: 1600px) and (-webkit-min-device-pixel-ratio: 2) and (min-resolution: 192dpi) {
   #laptop {
