--- a/SessionKStudio/week09/china.css
+++ b/SessionKStudio/week09/china.css
@@ -36,6 +36,13 @@ body {
     position: relative;
     z-index: 4;
   }
+  .drink {
+    margin-left: 7px;
+    margin-top: -30px;
+  }
+  .order {
+    margin-left: 7px;
+  }
   .box {
     margin-left: 8px;
     margin-top: 10px;
