--- a/SessionKStudio/week09/china.css
+++ b/SessionKStudio/week09/china.css
@@ -311,12 +311,46 @@ body {
     overflow-x: auto;
     width: 3500px;
     height: 2000px;
-    background-color: rgb(255, 0, 128);
+    background-color: #0618f9;
     margin-top: 500px;
+    animation-name: color;
+    animation-duration: 4s, infinite;
+  }
+  @keyframes color {
+    0% {
+      background-color: red;
+      left: 0px;
+      top: 0px;
+    }
+    25% {
+      background-color: yellow;
+      left: 200px;
+      top: 0px;
+    }
+    50% {
+      background-color: blue;
+      left: 200px;
+      top: 200px;
+    }
+    75% {
+      background-color: green;
+      left: 0px;
+      top: 200px;
+    }
+    100% {
+      background-color: red;
+      left: 0px;
+      top: 0px;
+    }
   }
   .track {
     position: absolute;
     margin-top: 1200px;
-    margin-left: 500px;
+    margin-left: 700px;
+  }
+
+  .thunder {
+    position: absolute;
+    margin-top: 560px;
   }
 }
