--- a/SessionKStudio/week09/china.css
+++ b/SessionKStudio/week09/china.css
@@ -304,6 +304,7 @@ body {
       -webkit-transform: rotate(0deg);
     }
   }
+
   .color {
     position: absolute;
     display: flex;
@@ -311,46 +312,73 @@ body {
     overflow-x: auto;
     width: 3500px;
     height: 2000px;
-    background-color: #0618f9;
+    background-color: black;
     margin-top: 500px;
     animation-name: color;
-    animation-duration: 4s, infinite;
+    animation-duration: 4s;
+    animation-iteration-count: infinite;
   }
-  @keyframes color {
+  /*@keyframes color {
     0% {
-      background-color: red;
-      left: 0px;
-      top: 0px;
+      background-color: rgb(248, 12, 130);
     }
     25% {
       background-color: yellow;
-      left: 200px;
-      top: 0px;
     }
     50% {
-      background-color: blue;
-      left: 200px;
-      top: 200px;
+      background-color: rgb(5, 255, 25);
     }
     75% {
-      background-color: green;
-      left: 0px;
-      top: 200px;
+      background-color: rgb(7, 255, 139);
     }
     100% {
-      background-color: red;
-      left: 0px;
-      top: 0px;
+      background-color: #0618f9;
     }
-  }
+  }*/
   .track {
     position: absolute;
     margin-top: 1200px;
-    margin-left: 700px;
+    margin-left: 760px;
+    z-index: 3;
   }
 
   .thunder {
     position: absolute;
     margin-top: 560px;
+  }
+  .tech {
+    position: absolute;
+    margin-top: 500px;
+    margin-left: -50px;
+  }
+  .word {
+    position: absolute;
+    margin-left: -100px;
+    margin-top: 1500px;
+    z-index: 1;
+  }
+
+  .bubble {
+    position: absolute;
+    margin-top: 2800px;
+    margin-left: 400px;
+    z-index: 3;
+  }
+  .color2 {
+    position: absolute;
+    display: flex;
+    flex-wrap: nowrap;
+    overflow-x: auto;
+    width: 3500px;
+    height: 2000px;
+    background-color: black;
+    margin-top: 3000px;
+    z-index: 1;
+  }
+  .disco {
+    position: absolute;
+    margin-top: 2500px;
+    margin-left: 500px;
+    z-index: 5;
   }
 }
