--- a/iarsn/iarsn.css
+++ b/iarsn/iarsn.css
@@ -1,45 +1,64 @@
-body {
-  background-color: #c1c1c1;
+@media screen and (min-device-width: 1200px) and (max-device-width: 1600px) and (-webkit-min-device-pixel-ratio: 2) and (min-resolution: 192dpi) {
+  #laptop {
+    display: block;
+  }
+  #phone {
+    display: none;
+  }
+
+  body {
+    background-color: #c1c1c1;
+  }
+
+  .title {
+    position: absolute;
+    margin-left: 50px;
+    margin-top: 20px;
+  }
+
+  .pic1 {
+    position: absolute;
+    margin-left: 300px;
+    margin-top: 340px;
+  }
+  .pic2 {
+    position: absolute;
+    margin-top: 30px;
+    margin-left: 300px;
+    z-index: 3;
+  }
+
+  .pic3 {
+    position: absolute;
+    margin-left: 700px;
+    margin-top: 30px;
+    z-index: 2;
+  }
+
+  .pic4 {
+    position: absolute;
+    margin-left: 550px;
+    margin-top: 340px;
+    z-index: 1;
+  }
+
+  #container {
+    margin-top: 20px;
+    margin-left: 40px;
+  }
+
+  .logo {
+    margin-left: 640px;
+    margin-top: -5px;
+  }
 }
 
-.title {
-  position: absolute;
-  margin-left: 50px;
-  margin-top: 20px;
-}
+@media only screen and (min-device-width: 375px) and (max-device-width: 667px) and (-webkit-min-device-pixel-ratio: 2) and (orientation: portrait) {
+  #phone {
+    display: block;
+  }
 
-.pic1 {
-  position: absolute;
-  margin-left: 300px;
-  margin-top: 340px;
-}
-.pic2 {
-  position: absolute;
-  margin-top: 30px;
-  margin-left: 300px;
-  z-index: 3;
-}
-
-.pic3 {
-  position: absolute;
-  margin-left: 700px;
-  margin-top: 30px;
-  z-index: 2;
-}
-
-.pic4 {
-  position: absolute;
-  margin-left: 550px;
-  margin-top: 340px;
-  z-index: 1;
-}
-
-#container {
-  margin-top: 20px;
-  margin-left: 40px;
-}
-
-.logo {
-  margin-left: 640px;
-  margin-top: -5px;
+  #laptop {
+    display: none;
+  }
 }
