--- a/iarsn/iarsn.css
+++ b/iarsn/iarsn.css
@@ -62,8 +62,12 @@
     display: none;
   }
 
+  body {
+    background-color: black;
+  }
+
   .pic1 {
-    margin-left: -5px;
-    margin-top: -5px;
+    margin-left: 390px;
+    margin-top: 50px;
   }
 }
